# vtk-sdk-python-wheel-helper

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml
.github/: ci.yml
.github/workflows/: cd.yml  ci.yml  commitlint.yml
CMake/: VTKSDKInstallRuntimeDeps.cmake  VTKSDKModuleBuilder.cmake  VTKSDKPackageInit.cmake  install-deps.cmake.in  vtkmodule-config.cmake.in
Scripts/: patchwheel
Testing/BasicProject/: CMakeLists.txt  pyproject.toml
Testing/BasicProject/Dummy/: CMakeLists.txt
Testing/Dependency/: CMakeLists.txt  Dependency.hpp
Testing/Dependency/CMake/: DependencyConfig.cmake.in
cmake/: VTKSDKCommon.cmake  VTKSDKInstallRuntimeDeps.cmake  VTKSDKModuleBuilder.cmake  VTKSDKModuleSDK.cmake  VTKSDKPackageInit.cmake
docs/: conf.py  index.rst  requirements.txt
tests/: conftest.py  test_all_modules.py  test_build_module.py  test_find_package.py  test_import.py
tests/BasicProject/: CMakeLists.txt  pyproject.toml
tests/BasicProject/Dummy/: CMakeLists.txt  vtk.module  vtkDummy.cxx
tests/BasicProject/SDK/: pyproject.toml
tests/Dependency/: Dependency.cpp
vtk_sdk_python_wheel_helper/: VTKSDKCommon.cmake  VTKSDKInstallRuntimeDeps.cmake  VTKSDKModuleBuilder.cmake  VTKSDKModuleSDK.cmake  VTKSDKPackageInit.cmake  VTKSDKPythonWheelHelper.cmake  install-deps.cmake.in
vtk_sdk_python_wheel_helper/cmake/: VTKSDKModuleSDK.cmake  vtkmodule-config.cmake.in
