[build-system]
requires = [
    "scikit-build-core",
    # Version of "vtk-sdk" should always be specified using "==X.Y.Z" and match the one associated with the "vtk" dependency below.
    "vtk-sdk==9.6.20260115.dev0"
]
build-backend = "scikit_build_core.build"

[project]
name = "basic-project"
version = "1.2.3"
dependencies = ["vtk==9.6.20260115.dev0"]
