[build-system]
requires = [
  "scikit-build-core",
  "vtk-sdk==9.6.0", # Version of "vtk-sdk" should always be specified using "==X.Y.Z" and match the one associated with the "vtk" dependency below.
  "vtk-sdk-python-wheel-helper"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build.cmake.define]
BUILD_SDK = "OFF"

[project]
name = "basic-project"
version = "1.2.3"
dependencies = ["vtk==9.6.0"]
